Fix alien photo mobile styling, add overflow wrap

--- a/src/index.css
+++ b/src/index.css
@@ -242,7 +242,6 @@ ul li {
   border-radius: 50%;
   margin-top: -6rem;
   margin-bottom: 3rem;
-  border-radius: 50%;
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -458,5 +457,11 @@ section .rain div:nth-child(8) {
   }
   .box-styles {
     margin: 3rem auto;
+  }
+  .box-styles ul {
+    overflow-wrap: break-word;
+  }
+  .alien {
+    margin-top: -9rem;
   }
 }
